--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Personal Portfolio Website</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/119aec3888.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/cdbf74934c.js" crossorigin="anonymous"></script>
     </head>
 <body>
 <div id="header">
@@ -26,7 +26,7 @@
             <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-            <p>UI/UX Designer</p>
+            <p>Developer | Sim Racer</p>
             <h1><span>Logan</span> Clampitt</h1>
         </div>
     </div>
@@ -40,7 +40,10 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>TEXTEXTTEXTTEXTTEXT</p>
+                <p>Hi, I’m Logan Clampitt — a Senior at Cal State Fullerton majoring in Computer Science.
+I’ve been passionate about computers and programming from a young age, and I enjoy constantly learning and improving my skills in software development.
+
+Outside of coding, I have a strong interest in graphic design, video editing, and sim racing — where I’ve competed professionally for over 8 years. Racing has taught me discipline and focus that I apply to both my career and academics.</p>
 
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -132,7 +135,6 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
     </div>
 </div>
 
