--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/LC_013 (1) (1).png">
+                <img src="images/LC_013 (1) (1).jpg">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
