--- a/index.html
+++ b/index.html
@@ -59,16 +59,18 @@ Outside of coding, I have a strong interest in graphic design, video editing, an
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
-                        <li><span>2022 - Current</span><br>UI/UX Design Training at CSUF</li>
-                        <li><span>2024 - </span><br>Job 1</li>
+                        <li><span>2015 - Current</span><br><strong>Professional Sim Racer - iRacing</strong><br>
+                            8+ years competing at a national level. Developed strong focus, adaptability, and decision-making under pressure. Created branding content and handled technical setups for optimal performance.</li>
+                        <li><span>2022 - Current</span><br><strong>Development Training at CSUF</strong><br>
+                            Completed design mockups, wireframing exercises, and user research as part of coursework. Focused on usability, accessibility, and responsive web design.</li>
                         <li><span>2024 - </span><br>Job 2</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2018</span><br>Education 1</li>
-                        <li><span>2019</span><br>Education 2</li>
-                        <li><span>2020</span><br>Education 3</li>
+                        <li><span>2018 - 2020</span><br><strong>Saddleback Community College</strong><br><em>General Education, Transfer Pathway</em></li>
+                        <li><span>2022-2023</span><br><strong>Saddleback Community College</strong><br><em>Computer Science Coursework</em></li>
+                        <li><span>2023-2025</span><br><strong>California State University Fullerton</strong><br><em>Bachelor of Science in Computer Science</em></li>
                     </ul>
                 </div>                
             </div>
@@ -84,21 +86,24 @@ Outside of coding, I have a strong interest in graphic design, video editing, an
                 <i class="fa-solid fa-code"></i>
                <h2>Web Design</h2>
                <p>
-                TEXTEXTTEXTTEXTTEXT</p> 
+                Clean, responsive websites built using HTML, CSS, and JavaScript. I focus on performance, mobile-friendliness, and visual appeal using modern design principles.
+</p> 
                <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop-simple"></i>
                 <h2>IU/UX Design</h2>
                 <p>
-                 TEXTEXTTEXTTEXTTEXT</p> 
+                    Designing intuitive, user-centered interfaces and wireframes using tools like Figma. Focused on usability, accessibility, and aesthetic alignment with brand identity.
+                </p> 
                 <a href="#">Learn more</a>
              </div>
              <div>
                 <i class="fa-brands fa-app-store"></i>
                 <h2>App Design</h2>
                 <p>
-                 TEXTEXTTEXTTEXTTEXT</p> 
+                    Creating engaging layouts and user flows for mobile or web apps. I specialize in design mockups, prototyping, and collaborative workflows between design and dev teams.
+                </p> 
                 <a href="#">Learn more</a>
              </div>
         </div>
