--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Outside of coding, I have a strong interest in graphic design, video editing, an
                             8+ years competing at a national level. Developed strong focus, adaptability, and decision-making under pressure. Created branding content and handled technical setups for optimal performance.</li>
                         <li><span>2022 - Current</span><br><strong>Development Training at CSUF</strong><br>
                             Completed design mockups, wireframing exercises, and user research as part of coursework. Focused on usability, accessibility, and responsive web design.</li>
-                        <li><span>2024 - </span><br>Job 2</li>
+                        <li><span></span><br></li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
