--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Outside of coding, I have a strong interest in graphic design, video editing, an
                             8+ years competing at a national level. Developed strong focus, adaptability, and decision-making under pressure. Created branding content and handled technical setups for optimal performance.</li>
                         <li><span>2022 - Current</span><br><strong>Development Training at CSUF</strong><br>
                             Completed design mockups, wireframing exercises, and user research as part of coursework. Focused on usability, accessibility, and responsive web design.</li>
-                        <li><span></span><br></li>
+                        <li><span>2024 - </span><br>Job 2</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
@@ -143,6 +143,40 @@ Outside of coding, I have a strong interest in graphic design, video editing, an
     </div>
 </div>
 
+<!-- ---------projects---------- -->
+<div id="projects">
+    <div class="container">
+      <h1 class="sub-title">Projects</h1>
+      <div class="racing-list">
+        <!-- Project 1 -->
+        <div class="racing">
+          <img src="images/portfolio.png" alt="Portfolio Website">
+          <div class="layer layer-orange">
+            <h3>Portfolio Website</h3>
+            <a href="https://loganclampitt.com" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+          </div>
+        </div>
+  
+        <!-- Project 2 -->
+        <div class="racing">
+          <img src="images/project-recipegen.png" alt="TBD">
+          <div class="layer layer-red">
+            <h3>AI Recipe Generator</h3>
+            <a href="#ai-recipe" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+          </div>
+        </div>
+  
+        <!-- Project 3 -->
+        <div class="racing">
+          <img src="images/project-crossyroad.png" alt="TBD">
+          <div class="layer layer-green">
+            <h3>Crossy Road Remake (Unreal)</h3>
+            <a href="#crossyroad" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
 
 <!-- ----------contact---------- -->
  <div id="contact">
@@ -150,13 +184,13 @@ Outside of coding, I have a strong interest in graphic design, video editing, an
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i><i class="fa-solid fa-paper-plane"></i></i> lclampitt@csu.fullerton.edu</p>
+                <p><i><i class="fa-solid fa-paper-plane"></i></i> logannc44@yahoo.com</p>
                 <div class="social-icons">
                     <a href="https://x.com/LoganClampitt_"><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="https://www.instagram.com/loganclampitt_/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/loganclampitt/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="images/Copy of Reflection form.docx (2).pdf" download class="btn btn2">Download CV</a>
+                <a href="images/Logan Clampitt Resume - 2024 (1).pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
