--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Outside of coding, I have a strong interest in graphic design, video editing, an
                     <a href="https://www.instagram.com/loganclampitt_/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/loganclampitt/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="images/Logan Clampitt Resume - 2024 (1).pdf" download class="btn btn2">Download CV</a>
+                <a href="images/Logan Clampitt Resume - 2024 (1).pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
